force-app/main/default/objects/Loan_Document_Requirement__mdt/Loan_Document_Requirement__mdt.object-meta.xml
<CustomObject>
    <description>Defines which document types are required for loan processing.</description>
    <label>Loan Document Requirement</label>
    <pluralLabel>Loan Document Requirements</pluralLabel>
</CustomObject>