force-app/main/default/objects/Loan_Document_Requirement__mdt/fields/Allowed_Mime_Types__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Mime_Types__c</fullName>
    <label>Allowed Mime Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>