force-app/main/default/objects/Loan_Document_Requirement__mdt/fields/Applies_To_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Loan_Type__c</fullName>
    <label>Applies To Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>