force-app/main/default/objects/Loan_Document_Requirement__mdt/fields/Due_Days_From_Created__c.field-meta.xml
<CustomField>
    <fullName>Due_Days_From_Created__c</fullName>
    <label>Due Days From Created</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>