force-app/main/default/objects/Loan_Document_Requirement__mdt/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <label>Max Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>