force-app/main/default/objects/Loan_Document_Requirement__mdt/fields/Max_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Max_Size_MB__c</fullName>
    <label>Max Size MB</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>