force-app/main/default/objects/Loan_Document_Requirement__mdt/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <label>Min Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>